--- a/src/style.scss
+++ b/src/style.scss
@@ -17,6 +17,7 @@ body {
 	padding: 0;
 }
 
+// GLOBAL STYLE TO CENTER CONTAINER
 .background-fit {
 	display: flex;
 	justify-content: center;
@@ -24,7 +25,7 @@ body {
 	height: 100vh;
 	background-color: $powder-blue;
 }
-
+// GLOBAL STYLE TO CREATE SHAPE OF DISPLAYING CONTENT
 .app-border {
 	width: 30%;
 	height: 95%;
@@ -34,13 +35,14 @@ body {
 	flex-direction: column;
 	overflow: hidden;
 }
-
+// STYLE FOR OVERFLOW CONTENT ON Y AXIS
 .y-overflow {
 	overflow-y: scroll;
 	-ms-overflow-style: none; /* IE and Edge */
 	scrollbar-width: none; /* Firefox */
 }
 
+// FORM STYLES FOR LOGIN AND REGISTER PAGES
 .formContainer {
 	.formWrapper {
 		border: 2px solid $mountain-pink;
@@ -107,6 +109,7 @@ body {
 	}
 }
 
+// NAVBAR COMPONENT
 .navbarContainer {
 	display: flex;
 	justify-content: space-between;
@@ -121,7 +124,6 @@ body {
 		align-items: center;
 		color: white;
 		font-size: 40px;
-		cursor: pointer;
 		img {
 			width: 44px;
 		}
@@ -140,10 +142,30 @@ body {
 			background-color: azure;
 		}
 	}
+
+	.userName {
+		color: white;
+		display: flex;
+		align-items: center;
+		font-size: 28px;
+		font-weight: 500;
+	}
+
+	.profileMenu {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		gap: 25px;
+		img {
+			width: 26px;
+			cursor: pointer;
+		}
+	}
 }
 
-.homepage {
-	.homeContainer {
+// PAGE: HOMEPAGE
+.page {
+	.container {
 		.displayContainer {
 			background-color: $glaucous;
 			height: calc(100% - 140px);
@@ -288,10 +310,167 @@ body {
 	}
 }
 
+// PAGE: PROFILE
+.profileContainer {
+	padding: 0px 40px 0px 40px;
+	.profileInfo {
+		display: flex;
+		padding: 10px 0px 10px 0px;
+		img {
+			width: 62px;
+			border-radius: 50%;
+			border: 3px solid $mountain-pink;
+			flex: 1;
+		}
+
+		.profileData {
+			flex: 2;
+			display: flex;
+			flex-direction: row;
+			justify-content: space-evenly;
+			align-items: center;
+
+			.data {
+				display: flex;
+				flex-direction: column;
+				gap: 10px;
+				text-align: center;
+				font-size: 20px;
+				font-weight: 700;
+			}
+		}
+	}
+	.profileBio {
+		display: flex;
+		flex-direction: column;
+		gap: 5px;
+		span {
+			font-size: 16px;
+			font-weight: 600;
+			word-break: normal;
+		}
+	}
+	.feed {
+		.icons {
+			display: flex;
+			//justify-content: space-evenly;
+			img {
+				background-color: $glaucous;
+				width: 32px;
+				text-align: center;
+				cursor: pointer;
+			}
+			.feed {
+				width: 50%;
+				text-align: center;
+			}
+			.saved {
+				width: 50%;
+				text-align: center;
+			}
+		}
+		.userPosts {
+			margin-top: 10px;
+			display: grid;
+			grid-template-columns: repeat(3, 1fr);
+			img {
+				width: 99%;
+				border: 1px solid $mountain-pink;
+				cursor: pointer;
+			}
+		}
+	}
+}
+
+// PAGE: EDIT PROFILE
+.editProfileContainer {
+	background-color: $glaucous;
+	height: 100vh;
+	.header {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		padding: 15px 20px 0px 20px;
+		span {
+			font-size: 24px;
+			font-weight: 700;
+		}
+	}
+	.profilePic {
+		display: flex;
+		flex-direction: column;
+		gap: 10px;
+		align-items: center;
+		img {
+			width: 200px;
+			border-radius: 50%;
+			border: 3px solid $mountain-pink;
+		}
+		span {
+			font-size: 18px;
+			font-weight: 500;
+			color: blue;
+			cursor: pointer;
+		}
+	}
+	form {
+		display: flex;
+		flex-direction: column;
+		gap: 25px;
+		padding: 0px 80px 0px 40px;
+		label {
+			display: flex;
+			align-items: start;
+			font-size: 16px;
+			
+			span {
+				flex: 1;
+				padding: 5px;
+			}
+
+			input {
+				flex: 3;
+				border: none;
+				border-bottom: 2px solid $powder-blue;
+				background-color: $glaucous;
+				padding: 5px;
+				outline: none;
+				color: white;
+			}
+
+			textarea {
+				flex: 3;
+				height: 100%;
+				width: 100%;
+				-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+				-moz-box-sizing: border-box; /* Firefox, other Gecko */
+				box-sizing: border-box; /* Opera/IE 8+ */
+				background-color: $glaucous;
+				padding: 5px;
+				outline: none;
+				color: white;
+				border: 2px solid $powder-blue;
+			}
+		}
+	}
+}
+
+.negative {
+	color: maroon;
+	cursor: pointer;
+}
+
+.positive {
+	color: rgb(23, 96, 23);
+	cursor: pointer;
+}
+
 .line-break {
-	border: 1px solid black;
+	border: 1px solid $mountain-pink;
 	height: 0px;
 }
+
+// PAGE: CREATE POST
 .createPost {
 	background-color: $glaucous;
 	height: calc(100% - 140px);
@@ -326,7 +505,7 @@ body {
 		}
 		button {
 			width: 100%;
-			max-height: 30px;
+			height: 35px;
 			padding: 5px;
 			border: none;
 			border-radius: 5px;
@@ -363,7 +542,7 @@ body {
 	}
 	span {
 		font-size: 22px;
-		font-weight: 700;
+		font-weight: 600;
 		color: white;
 		margin-top: 10px;
 	}
@@ -384,7 +563,7 @@ body {
 .createPost::-webkit-scrollbar {
 	display: none;
 }
-
+// MENU COMPONENT STYLING
 .menu {
 	display: flex;
 	flex-direction: row;
