--- a/src/style.scss
+++ b/src/style.scss
@@ -52,6 +52,7 @@ body {
 		align-items: center;
 		gap: 25px;
 		background-color: white;
+		border-radius: 5px;
 
 		.logo {
 			font-size: 4rem;
@@ -105,6 +106,9 @@ body {
 				cursor: pointer;
 				margin-top: 20px;
 			}
+		}
+		a {
+			color: blue;
 		}
 	}
 }
@@ -422,7 +426,7 @@ body {
 			display: flex;
 			align-items: start;
 			font-size: 16px;
-			
+
 			span {
 				flex: 1;
 				padding: 5px;
