--- a/src/style.scss
+++ b/src/style.scss
@@ -204,6 +204,10 @@ body {
 						flex-direction: column;
 						font-size: 18px;
 						font-weight: 600;
+						.location {
+							font-weight: 500;
+							font-size: 16px;
+						}
 					}
 				}
 
@@ -430,6 +434,7 @@ body {
 			span {
 				flex: 1;
 				padding: 5px;
+				font-weight: 600;
 			}
 
 			input {
@@ -586,3 +591,34 @@ body {
 		}
 	}
 }
+
+// POST VIEW: NAVBAR
+.post-nav {
+	padding: 20px;
+	height: 30px;
+	background-color: $glaucous;
+	border-bottom: 2px solid $mountain-pink;
+	display: flex;
+	align-items: center;
+	// justify-content: space-evenly;
+	column-gap: 38%;
+	img {
+		width: 32px;
+		cursor: pointer;
+		justify-self: start;
+	}
+	.post-title {
+		display: flex;
+		flex-direction: column;
+		font-size: 18px;
+		text-align: center;
+		color: white;
+		.user-name {
+			font-weight: 500;
+		}
+		.post {
+			font-weight: 700;
+		}
+	}
+}
+
