follow button on profile page

--- a/src/style.scss
+++ b/src/style.scss
@@ -348,44 +348,54 @@ body {
 			}
 		}
 	}
-	.profileBio {
-		display: flex;
-		flex-direction: column;
-		gap: 5px;
-		span {
-			font-size: 16px;
-			font-weight: 600;
-			word-break: normal;
+	label {
+		img {
+			max-width: 32px;
+			height: 32px;
+			background-color: $powder-blue;
+			padding: 5px;
+			border-radius: 10px;
+			cursor: pointer;
 		}
 	}
-	.feed {
-		.icons {
-			display: flex;
-			//justify-content: space-evenly;
-			img {
-				background-color: $glaucous;
-				width: 32px;
-				text-align: center;
-				cursor: pointer;
-			}
-			.feed {
-				width: 50%;
-				text-align: center;
-			}
-			.saved {
-				width: 50%;
-				text-align: center;
-			}
+}
+.profileBio {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+	span {
+		font-size: 16px;
+		font-weight: 600;
+		word-break: normal;
+	}
+}
+.feed {
+	.icons {
+		display: flex;
+		//justify-content: space-evenly;
+		img {
+			background-color: $glaucous;
+			width: 32px;
+			text-align: center;
+			cursor: pointer;
 		}
-		.userPosts {
-			margin-top: 10px;
-			display: grid;
-			grid-template-columns: repeat(3, 1fr);
-			img {
-				width: 99%;
-				border: 1px solid $mountain-pink;
-				cursor: pointer;
-			}
+		.feed {
+			width: 50%;
+			text-align: center;
+		}
+		.saved {
+			width: 50%;
+			text-align: center;
+		}
+	}
+	.userPosts {
+		margin-top: 10px;
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		img {
+			width: 99%;
+			border: 1px solid $mountain-pink;
+			cursor: pointer;
 		}
 	}
 }
@@ -621,4 +631,3 @@ body {
 		}
 	}
 }
-
