initialized firebase database and createWithEmailAndPassword

--- a/src/style.scss
+++ b/src/style.scss
@@ -55,7 +55,7 @@ body {
 		border-radius: 5px;
 
 		.logo {
-			font-size: 4rem;
+			font-size: 3rem;
 			font-weight: bold;
 			color: $charcoal;
 		}
@@ -105,6 +105,11 @@ body {
 				color: white;
 				cursor: pointer;
 				margin-top: 20px;
+			}
+			.error {
+				color: crimson;
+				font-size: 14px;
+				text-align: center;
 			}
 		}
 		a {
