--- a/src/style.scss
+++ b/src/style.scss
@@ -41,7 +41,59 @@ body {
 	-ms-overflow-style: none; /* IE and Edge */
 	scrollbar-width: none; /* Firefox */
 }
+// STYLE FOR START PAGE
+.startWrapper {
+	width: 50%;
+	height: 90%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	gap: 40px;
+	img {
+		width: 45%;
+		height: 85%;
+	}
+	.startInfo {
+		display: flex;
+		flex-direction: column;
+		gap: 15px;
+		width: 40%;
+		color: $charcoal;
+		.title {
+			font-size: 52px;
+			font-weight: 600;
+			margin-bottom: 20px;
+		}
+		.message {
+			font-size: 20px;
+			font-weight: 500;
+			line-height: 30px;
+		}
+		.options {
+			display: flex;
+			flex-direction: row;
+			gap: 10%;
+			margin-top: 20px;
+			button {
+				min-width: 130px;
+				min-height: 30px;
+				padding: 10px;
+				border: none;
+				border-radius: 5px;
+				background-color: $glaucous;
+				color: white;
+				font-size: 14px;
+				font-weight: 500;
+				cursor: pointer;
 
+				&:hover {
+					background-color: #91a7d3;
+				}
+			}
+		}
+	}
+}
 // FORM STYLES FOR LOGIN AND REGISTER PAGES
 .formContainer {
 	.formWrapper {
@@ -339,83 +391,86 @@ body {
 // PAGE: PROFILE
 .profileContainer {
 	padding: 0px 40px 0px 40px;
-	.profileInfo {
-		display: flex;
-		padding: 10px 0px 10px 0px;
-		img {
-			width: 62px;
-			border-radius: 50%;
-			border: 3px solid $mountain-pink;
-			flex: 1;
-		}
-
-		.profileData {
-			flex: 2;
+	.profile {
+		.profileInfo {
 			display: flex;
-			flex-direction: row;
-			justify-content: space-evenly;
-			align-items: center;
+			padding: 10px 0px 10px 0px;
+			img {
+				width: 62px;
+				border-radius: 50%;
+				border: 3px solid $mountain-pink;
+				flex: 1;
+			}
 
-			.data {
+			.profileData {
+				flex: 2;
 				display: flex;
-				flex-direction: column;
-				gap: 10px;
-				text-align: center;
-				font-size: 20px;
-				font-weight: 700;
+				flex-direction: row;
+				justify-content: space-evenly;
+				align-items: center;
+
+				.data {
+					display: flex;
+					flex-direction: column;
+					gap: 10px;
+					text-align: center;
+					font-size: 20px;
+					font-weight: 700;
+				}
 			}
 		}
-	}
-	label {
-		img {
-			max-width: 32px;
-			height: 32px;
-			background-color: $powder-blue;
-			padding: 5px;
-			border-radius: 10px;
-			cursor: pointer;
+		label {
+			img {
+				max-width: 32px;
+				height: 32px;
+				background-color: $powder-blue;
+				padding: 5px;
+				border-radius: 10px;
+				cursor: pointer;
+			}
 		}
-	}
-}
-.profileBio {
-	display: flex;
-	flex-direction: column;
-	gap: 5px;
-	span {
-		font-size: 16px;
-		font-weight: 600;
-		word-break: normal;
-	}
-}
-.feed {
-	.icons {
-		display: flex;
-		//justify-content: space-evenly;
-		img {
-			background-color: $glaucous;
-			width: 32px;
-			text-align: center;
-			cursor: pointer;
+
+		.profileBio {
+			display: flex;
+			flex-direction: column;
+			gap: 5px;
+			span {
+				font-size: 16px;
+				font-weight: 600;
+				word-break: normal;
+			}
 		}
 		.feed {
-			width: 50%;
-			text-align: center;
-			padding: 5px 0px 5px 0px;
-		}
-		.saved {
-			width: 50%;
-			text-align: center;
-			padding: 5px 0px 5px 0px;
-		}
-	}
-	.userPosts {
-		margin-top: 10px;
-		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-		img {
-			width: 99%;
-			border: 1px solid $mountain-pink;
-			cursor: pointer;
+			.icons {
+				display: flex;
+				//justify-content: space-evenly;
+				img {
+					background-color: $glaucous;
+					width: 32px;
+					text-align: center;
+					cursor: pointer;
+				}
+				.feed {
+					width: 50%;
+					text-align: center;
+					padding: 5px 0px 5px 0px;
+				}
+				.saved {
+					width: 50%;
+					text-align: center;
+					padding: 5px 0px 5px 0px;
+				}
+			}
+			.userPosts {
+				margin-top: 10px;
+				display: grid;
+				grid-template-columns: repeat(3, 1fr);
+				img {
+					width: 99%;
+					border: 1px solid $mountain-pink;
+					cursor: pointer;
+				}
+			}
 		}
 	}
 }
