--- a/src/style.scss
+++ b/src/style.scss
@@ -396,7 +396,8 @@ body {
 			display: flex;
 			padding: 10px 0px 10px 0px;
 			img {
-				width: 62px;
+				width: 140px;
+				height: 140px;
 				border-radius: 50%;
 				border: 3px solid $mountain-pink;
 				flex: 1;
@@ -496,6 +497,7 @@ body {
 		align-items: center;
 		img {
 			width: 200px;
+			height: 200px;
 			border-radius: 50%;
 			border: 3px solid $mountain-pink;
 		}
@@ -506,45 +508,56 @@ body {
 			cursor: pointer;
 		}
 	}
-	form {
+	.formContainer {
 		display: flex;
 		flex-direction: column;
-		gap: 25px;
-		padding: 0px 80px 0px 40px;
-		label {
+		gap: 20px;
+		form {
 			display: flex;
-			align-items: start;
-			font-size: 16px;
+			flex-direction: column;
+			gap: 25px;
+			padding: 0px 80px 0px 40px;
+			label {
+				display: flex;
+				align-items: start;
+				font-size: 16px;
 
-			span {
-				flex: 1;
-				padding: 5px;
-				font-weight: 600;
-			}
+				span {
+					flex: 1;
+					padding: 5px;
+					font-weight: 600;
+				}
 
-			input {
-				flex: 3;
-				border: none;
-				border-bottom: 2px solid $powder-blue;
-				background-color: $glaucous;
-				padding: 5px;
-				outline: none;
-				color: white;
-			}
+				input {
+					flex: 3;
+					border: none;
+					border-bottom: 2px solid $powder-blue;
+					background-color: $glaucous;
+					padding: 5px;
+					outline: none;
+					color: white;
+				}
 
-			textarea {
-				flex: 3;
-				height: 100%;
-				width: 100%;
-				-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-				-moz-box-sizing: border-box; /* Firefox, other Gecko */
-				box-sizing: border-box; /* Opera/IE 8+ */
-				background-color: $glaucous;
-				padding: 5px;
-				outline: none;
-				color: white;
-				border: 2px solid $powder-blue;
+				textarea {
+					flex: 3;
+					height: 100%;
+					width: 100%;
+					-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+					-moz-box-sizing: border-box; /* Firefox, other Gecko */
+					box-sizing: border-box; /* Opera/IE 8+ */
+					background-color: $glaucous;
+					padding: 5px;
+					outline: none;
+					color: white;
+					border: 2px solid $powder-blue;
+				}
 			}
+		}
+		.update-error {
+			color: maroon;
+			font-size: 24px;
+			font-weight: 500;
+			text-align: center;
 		}
 	}
 }
