--- a/src/style.scss
+++ b/src/style.scss
@@ -273,6 +273,7 @@ body {
 					flex-direction: column;
 					img {
 						border-radius: 10px;
+						height: 350px;
 					}
 				}
 
@@ -440,6 +441,9 @@ body {
 				font-weight: 600;
 				word-break: normal;
 			}
+			.description {
+				font-weight: 500;
+			}
 		}
 		.feed {
 			.icons {
@@ -468,6 +472,7 @@ body {
 				grid-template-columns: repeat(3, 1fr);
 				img {
 					width: 99%;
+					height: 130px;
 					border: 1px solid $mountain-pink;
 					cursor: pointer;
 				}
@@ -602,24 +607,28 @@ body {
 	}
 	.createImage {
 		width: 100%;
+		text-align: center;
+		display: flex;
+		flex-direction: column;
+		gap: 10px;
 		img {
 			width: 100%;
 			min-width: 150px;
-			min-height: 150px;
-			max-height: 350px;
+			height: 350px;
 			background-color: azure;
 			border-radius: 10px;
 		}
-		button {
+		label {
+			justify-content: center;
 			width: 100%;
-			height: 35px;
-			padding: 5px;
+			height: 25px;
+			text-align: center;
 			border: none;
 			border-radius: 5px;
 			background-color: $tiffany-blue;
 			color: white;
-			font-size: 14px;
-			font-weight: 500;
+			font-size: 20px;
+			font-weight: 700;
 			cursor: pointer;
 		}
 	}
