use local storage to store profileID, profileData, and posts global variables so components can load when users refresh the page

--- a/src/style.scss
+++ b/src/style.scss
@@ -251,6 +251,7 @@ body {
 
 					img {
 						width: 42px;
+						height: 42px;
 						border: 1px solid $mountain-pink;
 						border-radius: 50%;
 						background-color: azure;
