--- a/src/style.scss
+++ b/src/style.scss
@@ -262,6 +262,7 @@ body {
 						flex-direction: column;
 						font-size: 18px;
 						font-weight: 600;
+						cursor: pointer;
 						.location {
 							font-weight: 500;
 							font-size: 16px;
