--- a/src/style.scss
+++ b/src/style.scss
@@ -455,6 +455,21 @@ body {
 				cursor: pointer;
 			}
 		}
+		button {
+			width: 100%;
+			height: 30px;
+			background-color: $powder-blue;
+			outline: none;
+			border: none;
+			border-radius: 5px;
+			color: white;
+			font-size: 14px;
+			font-weight: 600;
+			cursor: pointer;
+			&:hover {
+				background-color: #a9b9CF;
+			}
+		}
 
 		.profileBio {
 			display: flex;
