--- a/src/style.scss
+++ b/src/style.scss
@@ -297,7 +297,7 @@ body {
 					padding: 0px 10px;
 					gap: 10px;
 					align-items: center;
-					font-size: 20px;
+					font-size: 18px;
 
 					span {
 						font-weight: 500;
@@ -440,7 +440,7 @@ body {
 					flex-direction: column;
 					gap: 10px;
 					text-align: center;
-					font-size: 20px;
+					font-size: 18px;
 					font-weight: 700;
 				}
 			}
@@ -709,6 +709,7 @@ body {
 
 		img {
 			width: 99%;
+			height: 135px;
 			border: 1px solid $mountain-pink;
 			cursor: pointer;
 		}
